# RikkyoMasterPJ

./: .gitattributes  .gitignore  DetectBigAssets.ps1  Pipfile  Readme.md  learning-exe.ps1  learning.ps1  learning_config.yaml  pyproject.toml  requirements.txt  set_learn_conf.ps1  tourch-test.ipynb
.github/workflows/: static.yml
DroneSimulator/: .gitignore
DroneSimulator/Assets/: PLATEAU_TEST2.unity - ショートカット.lnk
DroneSimulator/ProjectSettings/: ProjectSettings.asset
MAEasySimulator/Assets/: BoxReady.prefab  CommunicateAgent .prefab  CommunicateTower.prefab  DroneController.cs  DroneStation.prefab  EnvManager.cs  NNParam.yaml  Orenge.mat  SOS.prefab  Shelter.prefab  SpyAgent.cs  SpyAgent.prefab  SurpplieAgent.cs  SurpplieAgent.prefab  SurpplieBox.cs  TelloAgent.cs  TelloController.cs  Types.cs
MAEasySimulator/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
SampleSimulator/Assets/: DroneAgent.cs
SampleSimulator/Build_WebGL/: index.html
SampleSimulator/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
SampleSimulator/Publish/: index.html
SampleSimulator/config/: DroneAgent.yaml  DroneAgent2.yaml  DroneAgentSAC.yaml  DroneImitation.yaml
SimpleDrone+Navigation/ProjectSettings/: ProjectSettings.asset
SimpleDroneML-Ver1/: .gitignore
SimpleDroneML-Ver1/Assets/: Tree.prefab  test0.1.unity
SimpleDroneML-Ver1/ProjectSettings/: ProjectSettings.asset  TagManager.asset
results/mlagents-test1/: 3DBall.onnx  configuration.yaml
results/mlagents-test2/: configuration.yaml
(+633 files in other folders)
