[tool.poetry]
name = "learning-masterpj-basetech"
version = "0.1.0"
description = ""
authors = ["tsyu1234 <syukunt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<=3.10.8"
onnx = "1.15.0"
protobuf = "3.20.2"
ipykernel = "^6.29.2"
mlagents = "0.30.0"
mlagents-envs = "0.30.0"
torch = {version = "^1.8.2+cu111", source = "pytorch"}
torchvision = {version = "^0.9.2+cu111", source = "pytorch"}
torchaudio = {version = "^0.8.2", source = "pytorch"}
poethepoet = "^0.24.4"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/lts/1.8/cu111"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
hoge.shell = "echo hoge"
learn = { cmd = "powershell -File ./learning.ps1 $@", help = "Run the learning script with optional arguments." }
learn-exe = { cmd = "powershell -File ./learning-exe.ps1 $@", help = "Run the learning-exe script with optional arguments." }
freezepip.shell = "pip freeze > ./requirements.txt"
board.shell = "tensorboard --logdir=./results --port=6006"